--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta property="og:image" content="McFKVJp/20231031-211747-0000.png">
-	    <meta property="og:title" content="H4CKED BY DANDIER | CYBER ERROR SYSTEM">
-	    <meta property="og:description" content="this site been hacked by dandier C.E.S, fuck you india">
-		<meta name='description' content='H4cked by Dandier'/>
-		<meta name='keywords' content='H4cked by Dandier'/>
-		<meta name='Abstract' content='H4cked by Dandier'/> 
-		<meta name="title" content="H4cked? By Dandier"/>
+	<meta property="og:image" content="20231031-211747-0000.png">
+	    <meta property="og:title" content="H4CKED BY MsGrXX | CYBER ERROR SYSTEM">
+	    <meta property="og:description" content="this site been hacked by dandier C.E.S, fuck you">
+		<meta name='description' content='H4cked by MsGrXX'/>
+		<meta name='keywords' content='H4cked by MsGrXX'/>
+		<meta name='Abstract' content='H4cked by MsGrXX'/> 
+		<meta name="title" content="H4cked? By MsGrXX"/>
 		<meta name="googlebot" content="index,follow"/>
 		<meta name="robots" content="all"/>
 		<meta name="robots schedule" content="auto"/>
 		<meta name="distribution" content="global"/>
-		<meta name="author" content="Dandier"/>
+		<meta name="author" content="MsGrXX"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta property="og:description" content="Whoopz Dandier Was Here">
-		<title>H4cked By Dandier</title>
-	<link rel="canonical" href="http://locksmithneutralbay.com.au" />
+		<title>H4cked By MsGrXX</title>
+	<link rel="canonical" href="http://sevennetwork.my.id" />
 		<link href="jr4XB3z.png" rel="shortcut icon">
 		<link href="https://fonts.googleapis.com/css?family=Kelly+Slab" rel="stylesheet" type="text/css">
 		<base target="_blank"/>
@@ -49,12 +49,11 @@ a {
 </style>
 <table width="100%" height="100%">
 <td align="center">
-<img alt="#FUCKZIONIS" src="McFKVJp/20231031-211747-0000.png" width="250px">
- <h2>HACKED BY DANDIER</h2>
+<img alt="#FUCKZIONIS" src="20231031-211747-0000.png" width="250px">
+ <h2>HACKED BY MsGrXX</h2>
   <h4> WE ARE CYBER ERROR SYSTEM <br><br>AS LONG AS THE INDEPENDENCE OF THE PALESTINE PEOPLE HAS NOT BEEN DELIVERED TO THE PALESTINE PEOPLE,<br>THEN THE INDONESIAN PEOPLE WILL STAND UP AND CHALLENGE THE ISRAEL COLONIZERS.</ins><br></h4>
   <h2> <a href="https://t.me/cybererrorsystem" >#OpCanada #OpItaly #OpIsrael #OpIsrahell #OpUSA<br> #OpUK #OpIndia #OpFrance #OpUkraine #OpJapan</a></h2>
   <audio controls="controls" src="https://kosred.com/a/grcros.mp3"></audio>
  <h4>- <font color="white">Greetz</font> -<br>Hacktivist Indonesia - Garuda Security - Ganosec Team - Infinity Insight - Malang Blackhat - Surabaya Hacktivist<br>GB-Anon17 - Cyber Sederhana Team - Hizbullah Cyber Team - Estem Restoration Eagle - Anonymous X </h4>
-<h3>- <font color="red">C-E-S-TEAM</font> -<br>Fakesite - Doys_404 - Anon_lx02 - Fakesec666 - Iethesia - SukaJanda01 - Qyuraa - Enter666x - NoFace999 - Lanzz - Xzuvuww - XybaXploite - Vurex - Dandier - Xstroven - BigBoy - AgenMassive - KingArtur - IvanApolloyon - Amixploite - Machfood - Rsyiddz - Fedup_404 - UniCorn</h3>
-<center><font size="2">This is the free demo result. For a full version of this website, please go to  <a href="https://www6.waybackmachinedownloader.com/website-downloader-online/scrape-all-files/">Website Downloader</a></font></center></body>
+<h3>- <font color="red">C-E-S-TEAM</font> -<br>MsGrXX Fakesite - Doys_404 - Anon_lx02 - Fakesec666 - Iethesia - SukaJanda01 - Qyuraa - Enter666x - NoFace999 - Lanzz - Xzuvuww - XybaXploite - Vurex - Dandier - Xstroven - BigBoy - AgenMassive - KingArtur - IvanApolloyon - Amixploite - Machfood - Rsyiddz - Fedup_404 - UniCorn</h3>
 </html>
